[package]
name = "losant-esp-mqtt"
version = "0.1.0"
edition = "2021"
categories = ["embedded"]
keywords = ["embedded", "mqtt", "losant", "esp32"]
description = "MQTT Client for connecting Espressif devices to the Losant IoT Platform"
repository = "https://github.com/tedbyron/losant-mqtt-rs"
license = "MIT OR Apache-2.0"

[build-dependencies]
anyhow = "1.0"
embuild = "0.31"

[dependencies]
embedded-svc = "0.24"
esp-idf-hal = "0.40"
esp-idf-svc = "0.45"
esp-idf-sys = "0.32"
thiserror = "1.0"
toml-cfg = "0.1.3"
