[package]
name = "losant-esp-mqtt"
version = "0.1.0"
edition = "2021"
categories = ["embedded"]
keywords = ["embedded", "mqtt", "losant", "esp32"]
description = "MQTT Client for connecting Espressif devices to the Losant IoT Platform"
repository = "https://github.com/tedbyron/losant-mqtt-rs"
license = "MIT OR Apache-2.0"

[features]
default = []

[build-dependencies]
anyhow = "1.0"
embuild = "0.31"

[dev-dependencies]
anyhow = "1.0"

[dependencies]
dotenvy_macro = "0.15.7"
embedded-svc = "0.24"
esp-idf-svc = "0.45"
esp-idf-sys = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[example]]
name = "esp32-c3-devkit-rust-1"
required-features = ["esp-idf-sys/binstart"]
