[package]
name = "losant-mqtt-esp-idf"
version = "0.1.0"
edition = "2021"
description = "ESP-IDF MQTT Client for connecting devices to the Losant IoT Platform"
repository = "https://github.com/tedbyron/losant-mqtt-esp-idf"
authors = ["Teddy Byron <ted@tedbyron.com>"]
license = "MIT OR Apache-2.0"
categories = ["embedded"]
keywords = ["embedded", "mqtt", "losant", "esp32", "espressif"]

[[example]]
name = "esp32-c3-devkit-rust-1"

[build-dependencies]
anyhow = "1.0"
embuild = "0.31"

[dev-dependencies]
anyhow = "1.0"
toml-cfg = "0.1.3"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32", features = ["binstart"] }
rgb = "0.8.36"
shtcx = "0.11.0"

[dependencies]
embedded-svc = "0.24"
esp-idf-svc = "0.45"
esp-idf-sys = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml-cfg = "0.1.3"
thiserror = "1.0"
